--- a/examples/mnist/v1/pytorch_job_mnist_gloo.yaml
+++ b/examples/mnist/v1/pytorch_job_mnist_gloo.yaml
@@ -10,11 +10,12 @@ spec:
       template:
         metadata:
           annotations:
+            steamer-service-type: system
             sidecar.istio.io/inject: "false"
         spec:
           containers:
             - name: pytorch
-              image: gcr.io/<your_project>/pytorch_dist_mnist:latest
+              image: harbor.tidu.cd/qujun/pytorch-dist-mnist-test:1.0
               args: ["--backend", "gloo"]
               # Comment out the below resources to use the CPU.
               resources: 
@@ -26,11 +27,12 @@ spec:
       template:
         metadata:
           annotations:
+            steamer-service-type: system
             sidecar.istio.io/inject: "false"
         spec:
           containers: 
             - name: pytorch
-              image: gcr.io/<your_project>/pytorch_dist_mnist:latest
+              image: harbor.tidu.cd/qujun/pytorch-dist-mnist-test:1.0
               args: ["--backend", "gloo"]
               # Comment out the below resources to use the CPU.
               resources: 
